src/objects/ADvendio__BlockedAdSpecAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__BlockedAdSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blocked Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Blocked Ad Specs (Blocked Ad Spec)</relationshipLabel>
        <relationshipName>BlockedAdSpecAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Factor__c</fullName>
        <inlineHelpText>The master ad type blocks this many instances of the blocked ad type.</inlineHelpText>
        <label>Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MasterAdSpec__c</fullName>
        <label>Master Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Master Ad Specs</relationshipLabel>
        <relationshipName>MasterAdSpecAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Blocked Ad Spec</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Blocked Ad Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Ad Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>